<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:gravity="center"
    android:background="@color/white"
    android:layout_marginTop="0dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        >
        <TextView
            android:layout_marginTop="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Currency"
            android:textColor="@color/Dark_Blue"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/converter"
            android:textColor="@color/Dark_Blue"
            android:textSize="40sp"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="From"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:layout_marginTop="15dp"
            />

        <Spinner
            android:background="@color/white1"
            android:id="@+id/fromSp2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:padding="2dp"
            android:scrollbarSize="22dp"
            android:entries="@array/a2"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="To"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:layout_marginTop="15dp"
            />

        <Spinner
            android:background="@color/white1"
            android:id="@+id/toSp2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:padding="2dp"
            android:scrollbarSize="22dp"
            android:entries="@array/a2"
            />
    </LinearLayout>
    <EditText
        android:id="@+id/value2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:inputType="numberDecimal"
        android:hint="@string/enter_value"
        android:layout_weight="1"
        android:background="@color/white1"
        />
    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="15dp"
        android:text="Convert"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:background="@color/Gray"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:layout_marginTop="25dp"
            />
        <TextView
            android:id="@+id/result2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/converted_amount"
            android:textStyle="italic"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:background="@color/white1"
            />
    </LinearLayout>
</LinearLayout>